# trabalho-engenharia-de-dados

./: .dockerignore  .env-template  .env.example  .gitignore  404.html  CLAUDE.md  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
Dados/Registros-Candidatos-2024/: 10_dim_coligacao.csv  1_dim_partido.csv  2_dim_cargo.csv  3_dim_grau_instrucao.csv  4_dim_ocupacao.csv  5_dim_municipio.csv  7_dim_tipo_bem.csv  9_agg_bens.csv  9_agg_bens_estatistica.csv  gerar_origem.py  normalizar_tse.py
architecture/: index.html
architecture/medallion/: index.html
architecture/orchestration/: index.html
architecture/overview/: index.html
dags/: tse_medallion_papermill.py
dashboard/: app.py  gold_reader.py  index.html  kpis.py  minio_connection.py  pyproject.toml
dashboard/business/: index.html
dashboard/docker/: Dockerfile
dashboard/technical/: index.html
docker/: Dockerfile  Dockerfile.airflow  airflow-requirements.txt
docs/: dashboard.md  index.md  team.md
docs/architecture/: index.md  medallion.md  orchestration.md  overview.md
docs/dashboard/: business.md  index.md  technical.md
docs/pipeline/: bronze.md  gold.md  index.md  landing.md  scd2.md  setup.md  silver.md
notebook/: 00_populate_landing.ipynb  00_setup_buckets.ipynb  01_landing.ipynb  01_origem_para_landing.ipynb  02_bronze.ipynb  03_silver.ipynb  04_gold.ipynb  05_kpis.ipynb  06_scd2.ipynb  dir  landing_to_bronze.ipynb  origem_para_landing.ipynb
pipeline/: index.html
search/: search_index.json
setup/: index.html
startup/: 00_spark.py  00_startup.py
team/: index.html
(+11 files in other folders)
